--- a/Mission1/vagrant/Vagrantfile
+++ b/Mission1/vagrant/Vagrantfile
@@ -8,6 +8,10 @@ Vagrant.configure("2") do |config|
         vb.cpus = 2
     end
     config.vm.network "forwarded_port", guest: 8080, host: 8080
+    config.vm.network "forwarded_port", guest: 10080, host: 10080
+    config.vm.network "forwarded_port", guest: 10022, host: 10022
+    config.vm.network "forwarded_port", guest: 50000, host: 50000
+    config.vm.network "forwarded_port", guest: 80, host: 80
     config.ssh.keep_alive = true
     config.vm.provision "shell",
         inline: "sudo apt-get install -y linux-headers-$(uname -r) build-essential dkms"
