--- a/Mission1/vagrant/Vagrantfile
+++ b/Mission1/vagrant/Vagrantfile
@@ -7,11 +7,16 @@ Vagrant.configure("2") do |config|
         vb.memory = 2048
         vb.cpus = 2
     end
+    # Nginx
+    config.vm.network "forwarded_port", guest: 8888, host: 8888
+    # Jenkins web
     config.vm.network "forwarded_port", guest: 8080, host: 8080
+    # Gogs web
     config.vm.network "forwarded_port", guest: 10080, host: 10080
+    # Gogs ssh
     config.vm.network "forwarded_port", guest: 10022, host: 10022
+    # Jenkins agent
     config.vm.network "forwarded_port", guest: 50000, host: 50000
-    config.vm.network "forwarded_port", guest: 80, host: 80
     config.ssh.keep_alive = true
     config.vm.provision "shell",
         inline: "mkdir ~/workspace && sudo apt-get install -y linux-headers-$(uname -r) build-essential dkms"
