--- a/Mission1/ansible/Jenkins/container.yml
+++ b/Mission1/ansible/Jenkins/container.yml
@@ -49,7 +49,7 @@ settings:
 
 services: 
   jenkins:
-    from: "jenkins:latest"
+    from: "jenkins/jenkins:lts"
     restart: always
     ports:
       - "8080:8080/tcp"
