--- a/Mission1/vagrant/Vagrantfile
+++ b/Mission1/vagrant/Vagrantfile
@@ -1,6 +1,11 @@
+$script = <<-SCRIPT
+mkdir ~/workspace
+sudo apt update
+SCRIPT
+
 Vagrant.configure("2") do |config|
     # do something
-    config.vm.box = "ubuntu/trusty64"
+    config.vm.box = "ubuntu/xenial64"
     config.vm.provider "virtualbox" do |vb|
         vb.name = "mission1"
         vb.customize ["modifyvm", :id, "--cpuexecutioncap", "70"]
@@ -18,8 +23,7 @@ Vagrant.configure("2") do |config|
     # Jenkins agent
     config.vm.network "forwarded_port", guest: 50000, host: 50000
     config.ssh.keep_alive = true
-    config.vm.provision "shell",
-        inline: "mkdir ~/workspace && sudo apt-get install -y linux-headers-$(uname -r) build-essential dkms"
+    config.vm.provision "shell", inline: $script
     # The below mount point will caused the containers in the VM could not change the permission for files/folders,
     # because the permission controlled by the VM-host
     config.vm.synced_folder "data/", "/home/vagrant/workspace", disabled: true
