--- a/Mission1/ansible/start_Gogs-host.yml
+++ b/Mission1/ansible/start_Gogs-host.yml
@@ -1,54 +1,5 @@
 ---
 - hosts: default
   tasks:
-    - name: Check and Install the ansible on the remote machine
-      become: true
-      pip:
-        name: ansible
-    - name: Downgrade the pip to 9.0.3 for solving set of pip 10.x issues
-      become: true
-      pip:
-        name: pip
-        state: forcereinstall
-        version: 9.0.3
-    - name: Install ansible-container
-      become: true
-      pip:
-        name: ansible-container[docker]
-    - name: Downgrade the pip package 'docker' to 2.7.0 for solving ansible-container dependencies issue
-      become: true
-      pip:
-        name: docker
-        version: 2.7.0
-    - name: Copy the ansible-container related files to the remote machine
-      copy:
-        src: Gogs/
-        dest: ~/workspace/Gogs/
-    - name: Enusre the docker image is the latest - gogs
-      docker_image:
-        name: gogs/gogs:latest
-        force: yes
-    - name: Enusre the docker image is the latest - mysql
-      docker_image:
-        name: mysql:5.7
-        force: yes
-    - name: Build the docker container contains the Gogs
-      shell: ansible-container build --no-container-cache
-      args:
-        chdir: ~/workspace/Gogs
-    - name: Post-action for the mount folders
-      file:
-        path: "~/workspace/Gogs/{{ item }}" 
-        state: directory
-        mode: 0777
-      loop:
-        - data
-        - mysql_data
-    - name: Stop the running containers
-      shell: ansible-container stop
-      args:
-        chdir: ~/workspace/Gogs
-    - name: Start the docker container contains the Gogs
-      shell: ansible-container run
-      args:
-        chdir: ~/workspace/Gogs
+    - include: common/prepare_ansible-container.yml
+    - include: common/start_app_with_docker.yml app=Gogs images=["gogs/gogs:latest","mysql:5.7"] subfolders=["data","mysql_data"]
